[package]
name = "hanzi_lookup"
version = "1.0.0"
authors = ["gugray <zydeodict@gmail.com>"]

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2.59", features = ["serde-serialize"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.1.3"
serde_derive = "1.0.90"
serde_json = "1.0"
[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.8.6"
log="0.4.8"
android_log-sys="0.1.2"

[build-dependencies]
wasm-bindgen-cli = "= 0.2.59"
